--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fragile Trust</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.55.2/phaser.min.js"></script>
-    <script src="game.js" defer></script> 
+    <script type="module" src="game.js" defer></script> 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
