feat: add background overlay with animated circles for visual enhancement

--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fragile Trust</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.55.2/phaser.min.js"></script>
-    <script type="module" src="game.js" defer></script> 
-    <link rel="stylesheet" href="style.css">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Fragile Trust</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.55.2/phaser.min.js"></script>
+  <script type="module" src="game.js" defer></script>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    
+  <!-- Background overlay for calming effect -->
+  <div id="bg-overlay">
+      <div class="circle circle1"></div>
+      <div class="circle circle2"></div>
+      <div class="circle circle3"></div>
+      <div class="circle circle4"></div>
+      <div class="circle circle5"></div>
+      <div class="circle circle6"></div>
+      <div class="circle circle7"></div>
+      <div class="circle circle8"></div>
+      <div class="circle circle9"></div>
+      <div class="circle circle10"></div>
+      <div class="circle circle11"></div>
+      <div class="circle circle12"></div>
+  </div>
 </body>
 </html>
